# space_animation

./: Cargo.toml  README.md  rustc-ice-2024-12-16T20_34_54-91737.txt  rustc-ice-2024-12-16T20_34_54-91738.txt
pytools/: stats.py
src/: lib.rs  logger.rs  main.rs  settings.rs
src/app/: camera.rs  exit.rs  keybinds.rs  mod.rs  render.rs  resize.rs  scene.rs  screenshots.rs  shaders.rs  surface_holder.rs  update.rs
src/content/: main.rs  mod.rs
src/content/fightsky/: big_object.rs  mod.rs
src/content/models/: axis.rs  mod.rs
src/content/tests/: mod.rs
src/content/world_runner/: mod.rs
src/datastrutures/: container.rs  graph.rs  graph_runner.rs  mod.rs  sampler_linker.rs  spatial_set.rs  tree.rs
src/materials/: alloc.rs  bind_groups.rs  color.rs  depth.rs  dispatcher.rs  materials.rs  materials_type.rs  mod.rs  pipelines.rs  registry.rs  shaders.rs  shape.rs  vertex.rs
src/math/: angle.rs  dir.rs  mat4.rs  mod.rs  plane.rs  polynom_curve.rs  polynomial.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
src/models/: axis.rs  mod.rs
src/render_registry/: alloc.rs  bind_group_base.rs  bind_groups.rs  bind_groups_store.rs  depth.rs  materials.rs  mesh_builder.rs  mod.rs  pipelines.rs  prefabs.rs  registry.rs  shaders.rs  storage_structs.rs  vertex.rs
src/shaders/: bindings.wgsl  colors.wgsl  fragment.wgsl  selectors.wgsl  shadows.wgsl  simple.wgsl  vertex.wgsl
src/utils/: algos.rs  casts.rs  const_fns.rs  iterators.rs  macros.rs  mod.rs  traits.rs
src/world/: build_world.rs  camera.rs  color.rs  combinators.rs  entity.rs  material.rs  mesh_builder.rs  mod.rs  pack.rs  point.rs  register.rs  rotation.rs  shape.rs  stores.rs  variator.rs  view.rs  world.rs  world_builder.rs
src/world/primitives/: camera.rs  color.rs  mod.rs  (+2 more)
(+12 files in other folders)
