[package]
name = "space_animation"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu={version = "22.0.0"}
#glam={version="0.28.0", features = ["rand", "bytemuck"]}
bytemuck = { version = "1.16.3", features = ["derive", "nightly_portable_simd", "min_const_generics"] }
rand="0.8.5"
winit = "0.30.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pollster = "0.3.0"
#log = "0.4.22"
#strum = { version = "0.26" }
#strum_macros = "0.26"
#test
