[package]
name = "space_animation"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "24.0.3" }
#glam={version="0.28.0", features = ["rand", "bytemuck"]}
bytemuck = { version = "1.22.0", features = [
    "derive",
    "nightly_portable_simd",
    "min_const_generics",
] }
rand = "0.9.0"
winit = "0.30.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pollster = "0.4.0"
#log = "0.4.22"
#strum = { version = "0.26" }
#strum_macros = "0.26"
#test
