[package]
name = "space_animation"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib_space_animation"
path = "src/lib.rs"

[[bin]]
name = "space_animation"
path = "src/main.rs"

[dependencies]
wgpu = { version = "25.0.2" }
#glam={version="0.28.0", features = ["rand", "bytemuck"]}
bytemuck = { version = "1.22.0", features = [
    "derive",
    "nightly_portable_simd",
    "min_const_generics",
] }
rand = "0.9.1"
winit = "0.30.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pollster = "0.4.0"
#log = "0.4.22"
#strum = { version = "0.26" }
#strum_macros = "0.26"
#test
